Updated login to correctly display on mobile and different browser sizes

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,12 +1,33 @@
+@import '~bootstrap/scss/bootstrap-grid.scss';
+$card-color: white;
+
+#page {
+    width: 100%;
+    height: 100%;
+    margin: 0; 
+    overflow-y: scroll;
+    @media (max-width: 30rem) {
+        background-color: $card-color;
+    }
+}
+
 #loginContainer {
-    width: 25rem;
-    margin: 10em auto 0 auto;
+    width: 100%;
+    max-width: 25rem;
+    max-height: fit-content;
+    margin: auto;
     padding: 2rem;
-    background-color: rgb(255, 255, 255);
+    background-color: $card-color;
     
     -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
     box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+
+    @media (max-width: 30rem) {
+        max-width: 100%;
+        max-height: 100%;
+        box-shadow: none;
+    }
 
     // Stop Chrome's yelow autofill color from appearing
     input:-webkit-autofill {
@@ -17,7 +38,7 @@
     #logo {
         margin: auto;
         img {
-            width: 128px;
+            max-width: 128px;
             margin-left: auto;
             margin-right: auto;
         }
@@ -29,7 +50,7 @@
     }
 
     #formContainer {
-        width: 90%;
+        max-width: 90%;
         margin-left: auto;
         margin-right: auto;
 
